2006-05-212 Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/png.c: fix remapping of colors when
	saving IndexedA images; fixes bug #303864.
	
2006-05-22  Sven Neumann  <sven@gimp.org>

	* app/actions/plug-in-commands.c (plug_in_collect_image_args):
	removed debugging output.

	* app/tools/gimpscaletool.c: create the GimpSizeBox in the
	prepare() method to make entering relative sizes work.

2006-05-22  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpscaletool.c (gimp_scale_tool_prepare): initialize
	width, height and keep-aspect properties of the size box.

2006-05-22  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpclonetool.c: revert previous change. Tools must
	not do anything essential in cursor_update(), and poking in the
	GimpClone struct is a bad hack. Will look into this.

2006-05-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpclonetool.c:  apply patch from Michael
	Schumacher to show clone source even while not
	painting; fixes bug #324224.

2006-05-21  Michael Natterer  <mitch@gimp.org>

	* app/tools/tools-enums.h (enum GimpToolAction): prefix with
	GIMP_TOOL_ACTION_

	* app/display/gimpdisplay.c
	* app/display/gimpdisplayshell.c
	* app/tools/gimpaligntool.c
	* app/tools/gimpcolorpickertool.c
	* app/tools/gimpcolortool.c
	* app/tools/gimpcroptool.c
	* app/tools/gimpdrawtool.c
	* app/tools/gimpforegroundselecttool.c
	* app/tools/gimpfreeselecttool.c
	* app/tools/gimpimagemaptool.c
	* app/tools/gimpiscissorstool.c
	* app/tools/gimpmeasuretool.c
	* app/tools/gimpmovetool.c
	* app/tools/gimpnewrectselecttool.c
	* app/tools/gimppainttool.c
	* app/tools/gimpselectiontool.c
	* app/tools/gimptexttool.c
	* app/tools/gimptool.c
	* app/tools/gimptransformtool.c
	* app/tools/gimpvectortool.c
	* app/tools/tool_manager.c: changed accordingly. Introduce a
	common style for GimpTool::control()'s switch() block. Some
	minor cleanups.

2006-05-21  Michael Natterer  <mitch@gimp.org>
